# YUVDemo

./: .gitmodules
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/cat/yuvdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libyuv/: build.gradle
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: CMakeLists.txt  com_cat_libyuv_YUVConvertor.cpp
libyuv/src/main/java/com/cat/libyuv/: YUVConvertor.java
